# EDMS

./: .gitignore  CLAUDE.md  EDMS-MIGRATION.md  README.md  package.json
backend/: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260713_1705_340572519872_dp_create_dp_user.py  20260714_0957_d7db816ae523_dp_create_pwd_tables.py  20260714_1024_b490652c02f4_dp_create_audit_log.py  20260714_1126_237bfdfaa3a7_dp_create_param_tables.py  20260714_1145_6227f59bbd3f_dp_create_notify_template.py  20260714_1402_53ffc92cab2d_dp_create_email_log.py  20260714_1427_5065c9fdf7e4_dp_create_schedule_tables.py  20260714_1457_fd6f5608d0ed_dp_seed_platform_data.py  20260721_1722_f88e382d5953_dp_add_pending_registration.py  20260723_1356_58d4121e3efb_dp_pending_reg_add_kind_and_invite_.py  20260724_1547_e3f359da5d20_dp_param_d_add_param_name_desc.py
backend/app/core/: auth.py  base_model.py  config.py  cooldown.py  db.py  exceptions.py  module_admin.py  module_provisioning.py  module_roles.py  operator.py  pagination.py  password_gate.py  password_policy.py  rate_limit.py  request_context.py  utils.py
backend/app/dp/audit/: models.py  repository.py  service.py
backend/app/dp/notify/: mailer.py  models.py  repository.py  schemas.py  service.py  worker.py
backend/app/dp/params/: models.py  param_rules.py  repository.py  router.py  schemas.py  service.py
backend/app/dp/schedules/: models.py
backend/app/dp/user/: activate_service.py  activation.py  forgot_service.py  ids.py  models.py  register_service.py  repository.py  router.py  schemas.py  service.py  token.py  (+1 more)
backend/app/services/: __init__.py
backend/tests/: _xdist_db.py  conftest.py
backend/tests/integration/: conftest.py  test_db_skeleton.py
backend/tests/unit/: test_base_model.py  test_config.py  test_core_cooldown.py  test_core_jwt.py  test_core_module_admin.py  test_core_password_policy.py  test_core_rate_limit.py  test_health.py  test_main_lifespan.py
(+253 files in other folders)
