[project]
name = "edms-backend"
version = "0.1.0"
description = "EDMS — 教育訓練文件管理系統 後端"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.0",
    "asyncpg>=0.31.0",
    "bcrypt>=4.0.1,<5",
    "fastapi-mail>=1.5.0",
    "fastapi[standard]>=0.135.2",
    "greenlet>=3.0.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "sqlalchemy[asyncio]>=2.0.48",
]

# 說明：認證/寄信/排程依賴於 DP Foundation（#16 T001）引入——
#   pyjwt（簡單 JWT）、passlib[bcrypt]（密碼雜湊；bcrypt 釘 <5 因 passlib 1.7.4 與
#   bcrypt 5.0 不相容）、fastapi-mail（發信引擎）、apscheduler（排程引擎）。
#   cryptography 為 bcrypt/fastapi-mail 之傳遞依賴，不列直接依賴（EDMS Email 不加密）。

[dependency-groups]
dev = [
    "diff-cover>=10.3.0",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-dotenv>=0.5.2",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.5",
]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [
    "alembic/versions/",  # 自動產生的 migration 檔案，不做 lint
]

[tool.ruff.lint]
select = [
    "F",    # pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "I",    # isort
    "S",    # flake8-bandit（安全性）
    "B",    # flake8-bugbear
    "C90",  # mccabe 圈複雜度
    "RUF100",  # 偵測過時的 noqa
]
ignore = [
    "B008",  # FastAPI Depends() 寫在參數預設值是標準用法
]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["F811", "S101", "S105", "S106"]

[tool.pytest.ini_options]
env_files = [".env.test"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "unit: 單元測試，不依賴外部資源",
    "integration: 整合測試，需要資料庫連線",
]

[tool.coverage.run]
source = ["app"]
concurrency = ["greenlet", "thread"]

[tool.coverage.report]
show_missing = true
